--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ant-design-pro": "^1.1.0",
     "antd": "^3.2.1",
     "moment": "^2.21.0",
     "qrcode.react": "^0.8.0",
