--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ant-design-pro": "^1.1.0",
     "antd": "^3.2.1",
     "moment": "^2.21.0",
+    "numeral": "^2.0.6",
     "qrcode.react": "^0.8.0",
     "qs": "^6.5.1",
     "react": "^16.2.0",
