--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "dependencies": {
     "ant-design-pro": "^1.1.0",
     "antd": "^3.2.1",
+    "axios": "^0.18.0",
     "moment": "^2.21.0",
     "numeral": "^2.0.6",
     "qrcode.react": "^0.8.0",
-    "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "whatwg-fetch": "^2.0.3"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
