--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.6.1",
     "ant-design-pro": "^1.1.0",
     "antd": "^3.2.1",
     "axios": "^0.18.0",
@@ -15,7 +16,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
