--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ant-design-pro": "^1.1.0",
     "antd": "^3.2.1",
     "axios": "^0.18.0",
+    "immutable": "^3.8.2",
     "moment": "^2.21.0",
     "numeral": "^2.0.6",
     "qrcode.react": "^0.8.0",
