--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.18.0",
     "immutable": "^3.8.2",
     "moment": "^2.21.0",
+    "npm": "^5.7.1",
     "numeral": "^2.0.6",
     "qrcode.react": "^0.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
