--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
     "test": "react-scripts test --env=jsdom",
     "deploy": "react-scripts build && aws s3 sync build/ s3://ricepay.io",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
