--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,9 @@
   "env": {
     "browser": true
   },
+  "plugins": [
+    "react"
+  ],
   "settings": {
     "import/resolver": {
       "node": {
