--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ant-design-pro": "^1.1.0",
     "antd": "^3.2.1",
     "axios": "^0.18.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-react": "^7.7.0",
     "immutable": "^3.8.2",
     "moment": "^2.21.0",
     "numeral": "^2.0.6",
@@ -25,6 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "lint": "eslint --ext js src --fix",
     "deploy": "react-scripts build && aws s3 sync build/ s3://ricepay.io",
     "eject": "react-scripts eject"
   },
