--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "antd": "^3.2.1",
     "axios": "^0.18.0",
     "immutable": "^3.8.2",
+    "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "normalizr": "^3.2.4",
     "numeral": "^2.0.6",
     "qrcode.react": "^0.8.0",
     "react": "^16.2.0",
@@ -17,6 +19,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "wowjs": "^1.1.3"
