--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "deploy": "react-scripts build && aws s3 sync build/ s3://ricepay.io",
+    "deploy-demo": "react-scripts build && aws s3 sync build/ s3://demo.ricepay.io",
     "eject": "react-scripts eject"
   }
 }
